# vocal-magic

./: .gitignore  .gitmodules  AGENTS.md  README.md
webapp/: .gitignore  Cargo.toml
webapp/.cargo/: config.toml
webapp/src/: apps.rs  db.rs  events.rs  jobs.rs  main.rs  metallib.rs  storage.rs  worker.rs
webapp/src/models/: mod.rs  source_separation.rs  vocal2midi.rs  vocal_enhance.rs
webapp/src/web/: index.html
webapp/static/: index.html
