[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webapp"
path = "src/main.rs"

[dependencies]
srs-inference = { path = "../srs-inference" }
game-mlxrs = { path = "game-mlx-rs" }
mlx-rs = { git = "https://github.com/blossom-slopware/mlx-rs.git", rev = "b81194a47c2c6ba4ecb0cf370e4f0d941f52dd5d", version = "0.25.3", features = ["accelerate", "metal"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mb-roformer-mlx = { version = "0.1.0", path = "../mb-roformer-mlx" }
babycat = "0.0.15"
